# ArcPerp

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  package.json  tsconfig.json  vercel.json
artifacts/: circuits_hash.txt
circuits/: check_liquidation.rs  match_orders.rs  update_position.rs
client/: checkLiquidation.ts  encryptOrder.js  encryptOrder.ts  package-lock.json  package.json  pollSettlement.ts  submitOrder.js  submitOrder.ts  tsconfig.json
encrypted-ixs/src/: lib.rs
frontend/: App.js  App.tsx  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/components/: LiquidationWarning.js  LiquidationWarning.tsx  OrderForm.js  OrderForm.tsx  Portfolio.js  Portfolio.tsx  styles.css
frontend/idl/: private_perps.json
frontend/lib/: submitOrder.ts
programs/private_perps/: Cargo.toml
programs/private_perps/src/: lib.rs  state.rs
programs/private_perps/src/instructions/: execute_liquidation.rs  initialize_mxe.rs  mod.rs  settle_fill.rs  submit_order.rs
tests/: integration.ts
