[package]
name = "private_perps"
version = "0.1.0"
description = "Private perpetuals DEX settlement program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_perps"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
